MDEV-5938: Exec_master_log_pos not updated at log rotate in parallel replication

The code did not correctly handle the update of position for Rotate events in the
binlog/relaylog when using parallel replication.